@@ -37,6 +37,7 @@ These changes are merged into the `main` branch, but have not been released. Aft
 * `Reshape::FieldsToFieldGroupWithConstant` constant value is no longer added to rows with no values in the renamed/remapped value fields, when fieldmap length == 1. (PR#195)
 
 === Added
+* Ability to pass `find` argument to `Clean::RegexpFindReplaceFieldVals` as a `Regexp` object. Not sure why this was not the default initial behavior, but here we are! (PR#196)
 
 === Changed
 
